--- a/src/index.html
+++ b/src/index.html
@@ -1,36 +1,15 @@
-<html>
+<html process-init>
 	<head>
 		
-		<!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
+		<link rel="stylesheet" type="text/css" href="style.css">
 
 	</head>
 	<body>
 
-		<!--
 
-		<div id="commm_togglr">
-			<div id="commm_togglr_inner">
-				+
-			</div>
-		</div>
+		<div process="template.html"></div>
 
-		<div id="commm_container">
-			<div id="commm_container_inner">
-
-				<div id="commm_head">
-					<div id="commm_displayName">loading...</div>
-					<button id="commm_login">Login</button>
-					<a id="commm_logout" href="logout">Log-out</a>
-
-					<input id="commm_newtext" type="text" />
-					<button id="commm_newthread">New Thread</button>
-				</div>
-
-				<ul id="commm_mainList"></ul>
-			</div>
-		</div>
-
-		-->
+		<div process="stuff.html"></div>
 
 		<script type="text/javascript">
 		var firebase_config = {
@@ -45,10 +24,15 @@
 		<script src="vendor/jquery/dist/jquery.js"></script>
 		<script src="vendor/jquery.transit/jquery.transit.js"></script>
 		<script src="vendor/firebase/firebase.js"></script>
-		<script src="markup.js"></script>
+		<script src="template.js"></script>
 		<script src="style.js"></script>
 		<script src="script.js"></script>
 		<!-- endbuild -->
+
+
+		<script type="text/javascript" src="vendor/lodash/lodash.js"></script>
+		<script type="text/javascript" src="vendor/static-player/static-player.js"></script>
+
 
 	</body>
 </html>
