--- a/src/template.html
+++ b/src/template.html
@@ -8,7 +8,7 @@
 	<div id="commm_container_inner">
 
 		<div id="commm_head">
-			<button id="commm_close">x</button>
+			<button id="commm_close">></button>
 			<div id="commm_displayName">loading...</div>
 			<button id="commm_login">Login</button>
 			<a id="commm_logout" href="logout">Log-out</a>
@@ -17,6 +17,8 @@
 			<button id="commm_newthread">New Thread</button>
 		</div>
 
-		<ul id="commm_mainList"></ul>
+		<ul id="commm_mainList">
+			
+		</ul>
 	</div>
 </div>
