--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,9 @@
 		
 		<link rel="stylesheet" type="text/css" href="style.css">
 
+		<meta charset="utf-8">
+    	<meta name="viewport" content='width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0' />
+
 	</head>
 	<body>
 
