--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
 		  apiKey: "AIzaSyChN7OL3hGJe4NRF5rQ5DpaFurkLab3v7c",
 		  authDomain: "project-5948081093960809797.firebaseapp.com",
 		  databaseURL: "https://project-5948081093960809797.firebaseio.com",
-		  storageBucket: "",
+		  storageBucket: ""
 		};
 		</script>
 
@@ -29,7 +29,10 @@
 		<script src="vendor/firebase/firebase.js"></script>
 		<script src="template.js"></script>
 		<script src="style.js"></script>
+		<script src="js/bootstrap.js"></script>
+		<script src="js/public_stats.js"></script>
 		<script src="script.js"></script>
+		<script src="js/panel.js"></script>
 		<!-- endbuild -->
 
 
