some refactoring for public sandbox

--- a/src/index.html
+++ b/src/index.html
@@ -14,14 +14,7 @@
 
 		<div process="stuff.html"></div>
 
-		<script type="text/javascript">
-		var firebase_config = {
-		  apiKey: "AIzaSyChN7OL3hGJe4NRF5rQ5DpaFurkLab3v7c",
-		  authDomain: "project-5948081093960809797.firebaseapp.com",
-		  databaseURL: "https://project-5948081093960809797.firebaseio.com",
-		  storageBucket: ""
-		};
-		</script>
+		<script src="sandbox_config.js"></script>
 
 		<!-- build:js commm.js -->
 		<script src="vendor/jquery/dist/jquery.js"></script>
